Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67164

canbusutil is missing support for ConfigurationParameter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.0 Alpha
    • 5.11
    • SerialBus: CAN Bus
    • None
    • Windows, Linux
    • 1343e05db51e156ba315d2068c4ba2456443b3af

    Description

      Currently, the following parameters cannot be set with canbusutil:

      • CAN FD enabled/disabled
      • CAN bitrate
      • CAN FD data bitrate
      • Loopback mode
      • Receive own frames
      • Frame filter

      Especially important for the Windows plugins are the bitrate settings, as these are set per application there. These are no problem for SocketCAN, as the configuration is usually done outside the application.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aha_1980 André Hartmann
            aha_1980 André Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes