Add configuration options to canbusutil

[ChangeLog][canbusutil] Added configuration options to canbusutil,
e.g. for bitrate setting or to enable CAN FD operation mode.

Task-number: QTBUG-67164
Change-Id: I43690cfd3e0c24f3d5ad79d11b1a60e7fbec3dc1
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: Rolf Eike Beer <eb@emlix.com>